# rules_go_missing_pb_go

./: .gitignore  BUILD  WORKSPACE  demo.go
tiny/: BUILD.bazel  broken.proto
